# macro-containers

./: CMakeLists.txt  CMakePresets.json
cmake/: BuildGuard.cmake  FetchDependencies.cmake
include/: list.h
include/macro_containers/: fwd_list.h
src/: main.c
test/: CMakeLists.txt  test_fwd_list.c  test_runner.c  test_utils.h
